style.css
/* ... */
@keyframes load7 {
  0%,
  80%,
  100% {
    box-shadow: 0 2.5em 0 -1.3em;
  }
  40% {
    box-shadow: 0 2.5em 0 0;
  }
}

.report--design .highcharts {
  position: inherit!important;
  width: calc(100% - 60px) !important;
  margin-bottom: 30px;
}

.report--design {
  margin-bottom: 60px;
}

.highcharts {
  position: absolute;
  width: 100%;
  height: 85%;
  top: 15%;
}

.vue-grid-layout>div {
  background: #fff;
  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
  border: none !important;
  position: relative
}

.vdp-datepicker input {
  background: #fff;
  padding: .6em 1em;
  border: 0;
  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.15);
  margin-top: 6px;
  border-radius: 3px;
  color: rgba(0, 0, 0, 0.7);
  cursor: pointer;
  font-size: 13px;
  width: 100%;
}

.vdp-datepicker::after {
  content: '';
  display: block;
  width: 5px;
  height: 5px;
  position: absolute;
  right: 10px;
  bottom: 10px;
  border: 5px solid transparent;
  border-top-color: #5b64fc
}

.vue-grid-item {
  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12)!important;
  border-radius: 2px;
}

.vdp-datepicker__calendar {
  right: 0;
  left: auto
}

.table-scrollable {
  overflow-y: scroll;
  display: block;
  height: calc(100% - 50px);
  width: 100%;
}

.full-height {
  height: 100%
}

.report-element-wrapper {
  height: 100%;
}

.report--design .optionalItem {
  display: none
}

.report--design .dropdown-menu {
  top: 5px!important;
  right: 5px;
}
.report--design .dropdown-toggle {
  position: absolute;
  top: 4px;
  right: 0;
}
.report--design .vdp-datepicker__calendar {
  left: 0!important;
  right: auto!important;
}


/*.report--design .toggleTriggerBox {
  display: none
}*/

.main--input {
  background: #fff;
  padding: .6em 1em;
  border: 0;
  -webkit-box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.15);
  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.15);
  margin-top: 6px;
  border-radius: 3px;
  color: rgba(0, 0, 0, 0.7);
  cursor: pointer;
  font-size: 13px;
  width: 100%;
}

.btn--add {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  background: #432fc2;
  color: #fff;
  -webkit-box-shadow: 2px 2px 10px 0 rgba(108, 6, 225, 0.4);
  box-shadow: 2px 2px 10px 0 rgba(108, 6, 225, 0.4);
  min-height: 40px;
  font-size: 15px;
  transition: all 300ms;
  z-index: 99999;
  border: 0;
  border-radius: 3px;
  padding: 0 10px;
  min-width: 40px;
  text-align: center;
  padding-right: 0;
  padding-left: 0;
  position: relative;
  z-index: 9999
}

.btn--add i {
  margin-right: 0!important;
}

.btn--add.is-fixed {
  position: fixed;
  right: 30px;
  bottom: 30px;
  border-radius: 100px;
  padding: 0 20px;
}

.btn--add:hover {
  color: #fff;
  -webkit-box-shadow: 0 2px 20px 0 rgba(108, 6, 225, 0.5);
  box-shadow: 0 2px 20px 0 rgba(108, 6, 225, 0.5);
}

.btn--add i {
  font-size: 10px!important;
  margin-right: 5px;
}

* {
  outline: 0!important
}

.icon-minus:before {
  content: "\e900";
}

.icon-search:before {
  content: "\e901";
}

.icon-settings:before {
  content: "\e902";
}

.icon-hamburger:before {
  content: "\e903";
}

.icon-tri-left:before {
  content: "\e904";
}

.icon-arrow-right:before {
  content: "\e905";
}

.icon-plus:before {
  content: "\e906";
}

.icon-more:before {
  content: "\e907";
}

.icon-query-hide:before {
  content: "\e908";
}

.icon-query:before {
  content: "\e909";
}

.icon-refresh:before {
  content: "\e90a";
}

.icon-export:before {
  content: "\e90b";
}

.icon-arrow-down:before {
  content: "\e90c";
}



/*Scrollbar*/

::-webkit-scrollbar {
  width: 7px;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
}

::-webkit-scrollbar-thumb {
  background-color: rgba(111, 111, 111, 0.5);
  outline: 1px solid slategrey;
  border-radius: 6px;
}

* {
  margin: 0;
  padding: 0;
}

*,
*:after,
*::before {
  box-sizing: border-box;
}

body {
  /* height: 100vh; */
  overflow: hidden;
  background: #f1f1f1
}

a,
a:hover,
a:active,
a:focus {
  text-decoration: none;
}

ul,
ol {
  list-style: none;
  margin: 0;
  padding: 0;
}

.flex {
  display: flex;
}

.flex-left {
  justify-content: flex-start;
}

.flex-center {
  justify-content: center;
}

.flex-right {
  justify-content: flex-end;
}

.flex-space-between {
  justify-content: space-between;
}

.flex-top {
  align-items: flex-start;
}

.flex-middle {
  align-items: center;
}

.flex-bottom {
  align-items: flex-end;
}


.no-padding {
  padding: 0
}

.no-margin {
  margin: 0
}

.align-right {
  text-align: right
}

.align-left {
  text-align: left
}

.nav-panel .lists-of-nodes {
  color: #fff !important;
  border-radius: 2px
}

.nav-panel .lists-of-nodes span {
  margin-left: 10px
}

.dropdown-menu li:hover,
.toolbox-element-value:hover {
  background: #000
}

.report-element-header .dropdown-menu,
.reports-area .dropdown-menu {
  margin-left: -155px !important;
}



/*GORKEM*/

.tab-content {
  width: 100%;
}

li.nav-item {

  margin: 0 !important;
  padding: 0 !important;

  color: #5b64fc !important;
}


.nav-tabs {
  border-bottom: 1px solid #ddd
}

.nav-tabs>li>a:hover {
  background: #f5f5f5 !important;
  ;
  box-shadow: inset 0 3px 0 0 #5b64fc
}



/* dashboards specified */


/* .dashboards {padding-left:0} */

.nav-item:hover,
.nav-item.active,
.fixed-top-bar ul.dashboards li.active,
.fixed-top-bar ul.dashboards li:hover {
  background: #f5f5f5 !important;
  box-shadow: inset 0 3px 0 0 #5b64fc !important;
  color: #5b64fc !important;
}



/* dashboards specified */

.nav-link.active {
  box-shadow: inset 0 3px 0 0 #5b64fc;
  background: #f5f5f5;
  color: #5b64fc
}

.reports-area {
  margin: /*55px 0 0*/
  0;
}


.fixed-top-bar {
  background-color: #ffffff;
  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.12);
  height: 40px
}

.fixed-top-bar ul {
  margin: 0;
  padding: 0
}

.nav-item,
.fixed-top-bar span.button-holder,
.fixed-top-bar ul li {
  list-style: none;
  float: left;
  padding: 11px 18px 13px 18px;
  cursor: pointer
}
/* ... */

